Made a start on the header slider

--- a/index.html
+++ b/index.html
@@ -4,37 +4,60 @@
         <title>Obsidion Development Team</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="CSS/main.css">
-        <link rel="shortcut icon" type="image" href="IMG/favicon.png"" />
+        <link rel="shortcut icon" type="image" href="IMG/favicon.png"">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     </head>
     <body>
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #1F1A2B;">
-            <a class="navbar-brand minecraft-font" href="#" style="color: white; font-size: 25px;">Obsidion</a>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
+            <a class="navbar-brand" href="#" style=" font-size: 25px;">Obsidion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
-            <li class="nav-item minecraft-font">
-                <a class="nav-link navbar-color" href="#commands">About Us</a>
-            </li>
-            <li class="nav-item minecraft-font">
-                <a class="nav-link navbar-color" href="#team">The Team</a>
-            </li>
-            <li class="nav-item minecraft-font">
-                <a class="nav-link navbar-color" href="https://www.patreon.com/obsidion" target="_blank">Patreon</a>
-            </li>
-            <li class="nav-item minecraft-font">
-                <a class="nav-link navbar-color" href="https://github.com/Obsidion-dev/" target="_blank">GitHub</a>
-            </li>
-            </ul>
-        
-            <span class="navbar-text" style="color: white;">
-                <a href="/invite.html" style="color: white; font-size: 20px;" class="minecraft-font">Add to<img style="max-width: auto; max-height: 30px; vertical-align: -25%" src="img/Discord-Wordmark-Color.png"></a>
-            </span>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Our Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Obsidion-dev/" target="_blank">GitHub</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://discord.gg/7BTbHcTEch" target="_blank">Obsidion Discord</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.patreon.com/obsidion" target="_blank">Patreon</a>
+                    </li>
+                </ul>
             </div>
         </nav>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <br>
+        <br>
+        <br>
+
+        <div class="gallery js-flickity" 
+        data-flickity-options='{ "wrapAround": true, "imagesLoaded": true, "wrapAround": true }'>
+            <div class="gallery-cell">
+                <img src="IMG/Obsidion Bot.png" height="1080">
+                <div class="info">
+                    <button type="button" class="btn btn-primary btn-header">Primary</button>
+                </div>
+            </div>
+            <div class="gallery-cell">
+                <img src="IMG/asyncpixel.png" height="1080">
+            </div>
+            <div class="gallery-cell">
+                <img src="IMG/Obsidion Dashboard.png" height="1080">
+            </div>
+            <div class="gallery-cell">
+                <img src="IMG/mcsrvstats.png" height="1080">
+            </div>
+        </div>
     </body>
 </html>
