Finished main slider

--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
-            <a class="navbar-brand" href="#" style=" font-size: 25px;">Obsidion</a>
+            <a class="navbar-brand" href="#" style=" font-size: 25px;"><b>Obsidion Dev</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="">About Us</a>
+                        <a class="nav-link" href=""><b>About Us</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Our Projects</a>
+                        <a class="nav-link" href=""><b>Our Projects</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/Obsidion-dev/" target="_blank">GitHub</a>
+                        <a class="nav-link" href="https://github.com/Obsidion-dev/" target="_blank"><b>GitHub</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://discord.gg/7BTbHcTEch" target="_blank">Obsidion Discord</a>
+                        <a class="nav-link" href="https://discord.gg/7BTbHcTEch" target="_blank"><b>Obsidion Discord</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.patreon.com/obsidion" target="_blank">Patreon</a>
+                        <a class="nav-link" href="https://www.patreon.com/obsidion" target="_blank"><b>Patreon</b></a>
                     </li>
                 </ul>
             </div>
@@ -42,21 +43,85 @@
         <br>
 
         <div class="gallery js-flickity" 
-        data-flickity-options='{ "wrapAround": true, "imagesLoaded": true, "wrapAround": true }'>
-            <div class="gallery-cell">
-                <img src="IMG/Obsidion Bot.png" height="1080">
-                <div class="info">
-                    <button type="button" class="btn btn-primary btn-header">Primary</button>
+        data-flickity-options='{ "wrapAround": true, "imagesLoaded": true, "wrapAround": true, "autoPlay": true }'>
+            <div class="gallery-cell header-1">
+                <div class="white-square">
+                    <div class="square-content">
+                        <center>
+                            <h1 class="heading-title">Obsidion Discord Bot</h1>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://github.com/Obsidion-dev/Obsidion"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://discord.obsidion-dev.com/"><button type="button" class="btn btn-slider btn-lg"><b>Website</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
                 </div>
             </div>
-            <div class="gallery-cell">
-                <img src="IMG/asyncpixel.png" height="1080">
+            <div class="gallery-cell header-2">
+                <div class="white-square">
+                    <div class="square-content">
+                        <center>
+                            <h1 class="heading-title">Asyncpixel</h1>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="#asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="https://github.com/Obsidion-dev/asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
+                </div>
             </div>
-            <div class="gallery-cell">
-                <img src="IMG/Obsidion Dashboard.png" height="1080">
+            <div class="gallery-cell header-3">
+                <div class="white-square">
+                    <div class="square-content">
+                        <center>
+                            <h1 class="heading-title">Obsidion Dashboard</h1>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="https://github.com/Obsidion-dev/Obsidion-Dashboard"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
+                </div>
             </div>
-            <div class="gallery-cell">
-                <img src="IMG/mcsrvstats.png" height="1080">
+            <div class="gallery-cell header-4">
+                <div class="white-square">
+                    <div class="square-content">
+                        <center>
+                            <h1 class="heading-title">Mcsrvstats</h1>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="https://github.com/Obsidion-dev/mcsrvstats"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
