Added sections for our projects

--- a/index.html
+++ b/index.html
@@ -38,91 +38,171 @@
                 </ul>
             </div>
         </nav>
-        <br>
-        <br>
-        <br>
-
-        <div class="gallery js-flickity" 
-        data-flickity-options='{ "wrapAround": true, "imagesLoaded": true, "wrapAround": true, "autoPlay": true }'>
-            <div class="gallery-cell header-1">
-                <div class="white-square">
-                    <div class="square-content">
-                        <center>
-                            <h1 class="heading-title">Obsidion Discord Bot</h1>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-sm">
-                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
-                                    </div>
-                                    <div class="col-sm">
-                                        <a href="https://github.com/Obsidion-dev/Obsidion"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
-                                    </div>
-                                    <div class="col-sm">
-                                        <a href="https://discord.obsidion-dev.com/"><button type="button" class="btn btn-slider btn-lg"><b>Website</b></button></a>
+        <section>
+            <br>
+            <div class="gallery js-flickity" 
+            data-flickity-options='{ "wrapAround": true, "imagesLoaded": true, "wrapAround": true, "autoPlay": true }'>
+                <div class="gallery-cell header-1">
+                    <div class="white-square">
+                        <div class="square-content">
+                            <center>
+                                <h1 class="heading-title white">Obsidion Discord Bot</h1>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                        </div>
+                                        <div class="col-sm">
+                                            <a href="https://github.com/Obsidion-dev/Obsidion"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                        </div>
+                                        <div class="col-sm">
+                                            <a href="https://discord.obsidion-dev.com/"><button type="button" class="btn btn-slider btn-lg"><b>Website</b></button></a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </center>
+                            </center>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-cell header-2">
+                    <div class="white-square">
+                        <div class="square-content">
+                            <center>
+                                <h1 class="heading-title white">Asyncpixel</h1>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="#asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://github.com/Obsidion-dev/asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </center>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-cell header-3">
+                    <div class="white-square">
+                        <div class="square-content">
+                            <center>
+                                <h1 class="heading-title white">Obsidion Dashboard</h1>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="#dashboard"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://github.com/Obsidion-dev/Obsidion-Dashboard"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </center>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-cell header-4">
+                    <div class="white-square">
+                        <div class="square-content">
+                            <center>
+                                <h1 class="heading-title white">Mcsrvstats</h1>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="#mcsrvstats"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://github.com/Obsidion-dev/mcsrvstats"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </center>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="gallery-cell header-2">
-                <div class="white-square">
-                    <div class="square-content">
-                        <center>
-                            <h1 class="heading-title">Asyncpixel</h1>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="#asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://github.com/Obsidion-dev/asyncpixel"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
-                                    </div>
-                                </div>
+        </section>
+        <section id="obsidion">
+            <div class="content-scroll">
+                <div class="container-fluid">
+                    <div class="row justify-content-md-center">
+                        <div class="col">
+                            <h1><b>Obsidion Discord Bot</b></h1>
+                            <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
+                                felis non efficitur volutpat, sapien nulla pretium mi, 
+                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
+                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                        </div>
+                        <div class="col-md-auto">
+                            <div class="d-flex justify-content-end">
+                                <img src="IMG/Obsidion Bot.png" class="rounded mobile-image align-right img-fluid">
                             </div>
-                        </center>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="gallery-cell header-3">
-                <div class="white-square">
-                    <div class="square-content">
-                        <center>
-                            <h1 class="heading-title">Obsidion Dashboard</h1>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://github.com/Obsidion-dev/Obsidion-Dashboard"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
-                                    </div>
-                                </div>
+        </section>
+        <section id="asyncpixel">
+            <div class="content-scroll">
+                <div class="container-fluid">
+                    <div class="row justify-content-md-center">
+                        <div class="col">
+                            <h1 class="white"><b>Asyncpixel</b></h1>
+                            <br>
+                            <p class="white"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
+                                felis non efficitur volutpat, sapien nulla pretium mi, 
+                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
+                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                        </div>
+                        <div class="col-md-auto">
+                            <div class="d-flex justify-content-end">
+                                <img src="IMG/asyncpixel.png" class="rounded mobile-image align-right img-fluid">
                             </div>
-                        </center>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="gallery-cell header-4">
-                <div class="white-square">
-                    <div class="square-content">
-                        <center>
-                            <h1 class="heading-title">Mcsrvstats</h1>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="#obsidion"><button type="button" class="btn btn-slider btn-lg"><b>Learn More</b></button></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://github.com/Obsidion-dev/mcsrvstats"><button type="button" class="btn btn-slider btn-lg"><b>GitHub</b></button></a>
-                                    </div>
-                                </div>
+        </section>
+        <section id="dashboard">
+            <div class="content-scroll">
+                <div class="container-fluid">
+                    <div class="row justify-content-md-center">
+                        <div class="col">
+                            <h1><b>Obsidion Dashboard</b></h1>
+                            <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
+                                felis non efficitur volutpat, sapien nulla pretium mi, 
+                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
+                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                        </div>
+                        <div class="col-md-auto">
+                            <div class="d-flex justify-content-end">
+                                <img src="IMG/Obsidion Dashboard.png" class="rounded mobile-image align-right img-fluid">
                             </div>
-                        </center>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section id="mcsrvstats">
+            <div class="content-scroll">
+                <div class="container-fluid">
+                    <div class="row justify-content-md-center">
+                        <div class="col">
+                            <h1 class="white"><b>Mcsrvstats</b></h1>
+                            <p class="white"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
+                                felis non efficitur volutpat, sapien nulla pretium mi, 
+                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
+                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                        </div>
+                        <div class="col-md-auto">
+                            <div class="d-flex justify-content-end">
+                                <img src="IMG/mcsrvstats.png" class="rounded mobile-image align-right img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
