Finished adding text

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href=""><b>About Us</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href=""><b>Our Projects</b></a>
+                        <a class="nav-link" href="#obsidion"><b>Our Projects</b></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Obsidion-dev/" target="_blank"><b>GitHub</b></a>
@@ -129,10 +126,22 @@
                     <div class="row justify-content-md-center">
                         <div class="col">
                             <h1><b>Obsidion Discord Bot</b></h1>
-                            <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
-                                felis non efficitur volutpat, sapien nulla pretium mi, 
-                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
-                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                            <p><b>Obsidion is the worlds most advanced Discord bot for Minecraft that is also free and open source. With Obsidion you can get statistics from your favourite Minecraft server
+                                , make custom signs and achievments, and you can link your Minecraft username to the bot so you can request your latest info with the "/profile" command (coming in version 4). 
+                                Obsidion also has a customizable prefix so that it doesn't interfre with any of the other bots on your server.</b></p>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <a href="https://discordapp.com/oauth2/authorize?client_id=691589447074054224&scope=bot&permissions=314432"><button type="button" class="btn btn-dark btn-lg"><b>Invite to your server</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://github.com/Obsidion-dev/Obsidion"><button type="button" class="btn btn-dark btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://discord.obsidion-dev.com/"><button type="button" class="btn btn-dark btn-lg"><b>Website</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-auto">
                             <div class="d-flex justify-content-end">
@@ -150,10 +159,21 @@
                         <div class="col">
                             <h1 class="white"><b>Asyncpixel</b></h1>
                             <br>
-                            <p class="white"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
-                                felis non efficitur volutpat, sapien nulla pretium mi, 
-                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
-                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                            <p class="white"><b>Asyncpixel is an open source asyncronous python wrapper for the hypixel api with 100% of all endpoints.
+                                Asyncpixel is currently the only python library with full coverage of the hypixel API.
+                                All of Asyncpixel's models are checked and validated by Pydantic so that our data is always in the correct format for you to use.
+                                To install Asyncpixel symply run "pip install asyncpixel".
+                            </b></p>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <a href="https://asyncpixel.readthedocs.io/en/latest/"><button type="button" class="btn btn-dark btn-lg"><b>Documentation</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://github.com/Obsidion-dev/asyncpixel"><button type="button" class="btn btn-dark btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-auto">
                             <div class="d-flex justify-content-end">
@@ -170,10 +190,17 @@
                     <div class="row justify-content-md-center">
                         <div class="col">
                             <h1><b>Obsidion Dashboard</b></h1>
-                            <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
-                                felis non efficitur volutpat, sapien nulla pretium mi, 
-                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
-                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                            <p><b>Obsidion Dashboard is the one place you can go to to control everything Obsidion. From the Dashboard you can change the bots prefix
+                                so it doesn't interfre with any of the other bots on your server. You can update your linked Minecraft account so you can always get up to date information
+                                from the "/profile" command. You can also change the Minecraft server that your Discord server is linked to all from one Website. Obsidion Dashboard will be releasing soon.
+                            </b></p>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <a href="https://github.com/Obsidion-dev/Obsidion-Dashboard"><button type="button" class="btn btn-dark btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-auto">
                             <div class="d-flex justify-content-end">
@@ -190,10 +217,20 @@
                     <div class="row justify-content-md-center">
                         <div class="col">
                             <h1 class="white"><b>Mcsrvstats</b></h1>
-                            <p class="white"><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam laoreet leo in sodales placerat. Mauris tincidunt eros eget odio eleifend, sed tristique quam iaculis. Aenean molestie sagittis odio eget ornare. Integer feugiat, 
-                                felis non efficitur volutpat, sapien nulla pretium mi, 
-                                ut molestie est nunc nec ligula. Sed pellentesque tristique lobortis. Donec laoreet lobortis massa. Quisque scelerisque sit amet ex non auctor. 
-                                Aliquam ornare, mi sed ultricies eleifend, est risus ultricies mauris, quis placerat libero nisi nec justo. </b></p>
+                            <p class="white"><b>Mcsrvstats is an open source asyncronous python wrapper for your favourite Minecraft Servers.
+                                Mcsrvstats has support for Hive, Manacube, BlocksMC, UniversoCraft, MineSaga, GommeHD, and VeltPvP.
+                                All of Mcsrvstats's models are checked and validated by Pydantic so that our data is always in the correct format for you to use.
+                                To install Mcsrvstats symply run "pip install mcsrvstats". </b></p>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <a href="https://mcsrvstats.readthedocs.io/en/latest/"><button type="button" class="btn btn-dark btn-lg"><b>Documentation</b></button></a>
+                                    </div>
+                                    <div class="col-sm">
+                                        <a href="https://github.com/Obsidion-dev/mcsrvstats"><button type="button" class="btn btn-dark btn-lg"><b>GitHub</b></button></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-auto">
                             <div class="d-flex justify-content-end">
@@ -202,6 +239,7 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
     </body>
