--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: white;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top animate__slideInLeft" style="background-color: white;">
             <a class="navbar-brand" href="#" style=" font-size: 25px;"><b>Obsidion Dev</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
